[package]
name = "arbor"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
winit = { version = "0.29", features = ["rwh_05"] }
wgpu = "0.19.3"
cgmath = "0.18.0"
bytemuck = { version = "1.12", features = [ "derive" ] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]